--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e7b8702a",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 14664), started 3 days, 0:26:49 ago. (Use '!kill 14664' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 14272), started 0:02:22 ago. (Use '!kill 14272' to kill it.)"
       ]
      },
      "metadata": {},
@@ -274,11 +274,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-d1ddf7065b8169d0\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-71c2205ba4856b89\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-d1ddf7065b8169d0\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-71c2205ba4856b89\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
