--- a/demo.ipynb
+++ b/demo.ipynb
@@ -38,14 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "workdir = '.'\n",
     "if isGoogleColab():\n",
     "    from google.colab import drive\n",
     "    google_drive_root = \"/content/drive/MyDrive\"\n",
     "    # This will prompt for authorization.\n",
     "    drive.mount(google_drive_root)\n",
-    "    workdir = f\"{google_drive_root}/Colab Notebooks/miniai\"\n",
-    "else:\n",
-    "  workdir = '.'"
+    "    workdir = f\"{google_drive_root}/Colab Notebooks/miniai\""
    ]
   },
   {
@@ -117,31 +116,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "72cdfb91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!conda update -y -q -c conda-forge conda"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "87a58e32",
    "metadata": {},
    "source": [
-    "## Install the dependencies"
+    "## Install the Dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d0c5e57e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!conda env update --file f\"$workdir/environment.yml\""
+    "import subprocess\n",
+    "if isGoogleColab():\n",
+    "    subprocess.run(['conda', 'env', 'update', '--file', f\"{workdir}/environment.yml\"])"
    ]
   },
   {
@@ -154,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "088b16b9",
    "metadata": {},
    "outputs": [],
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bf33b035",
    "metadata": {},
    "outputs": [
@@ -199,10 +190,10 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print('Using device:', device)\n",
     "if device.type == 'cuda':\n",
-    "  print(torch.cuda.get_device_name(0))\n",
-    "  print('Memory Usage:')\n",
-    "  print('Allocated:', round(torch.cuda.memory_allocated(0)/1024**3,1), 'GB')\n",
-    "  print('Cached:   ', round(torch.cuda.memory_reserved(0)/1024**3,1), 'GB')"
+    "    print(torch.cuda.get_device_name(0))\n",
+    "    print('Memory Usage:')\n",
+    "    print('Allocated:', round(torch.cuda.memory_allocated(0)/1024**3,1), 'GB')\n",
+    "    print('Cached:   ', round(torch.cuda.memory_reserved(0)/1024**3,1), 'GB')"
    ]
   },
   {
@@ -215,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4557af0d",
    "metadata": {},
    "outputs": [
@@ -247,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "18951506",
    "metadata": {
     "scrolled": true
@@ -264,7 +255,7 @@
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 14272), started 0:02:22 ago. (Use '!kill 14272' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 18080), started 0:02:02 ago. (Use '!kill 18080' to kill it.)"
       ]
      },
      "metadata": {},
@@ -274,11 +265,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-71c2205ba4856b89\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-edb96395a2ca85d2\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-71c2205ba4856b89\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-edb96395a2ca85d2\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -323,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "88870dbf",
    "metadata": {
     "scrolled": true
@@ -361,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "11dd85db",
    "metadata": {},
    "outputs": [
